--- a/index.html
+++ b/index.html
@@ -6,25 +6,27 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <h1>Teachable Machine Pose Model</h1>
+    <h1>Catch the Fruit</h1>
     <div class="button-container">
-      <button type="button" id="startBtn" onclick="init()">Start</button>
+      <button type="button" id="startBtn" onclick="init()">Start Camera</button>
+      <button type="button" id="gameStartBtn" onclick="startGame()" disabled>Start Game</button>
       <button type="button" id="stopBtn" onclick="stop()" disabled>Stop</button>
     </div>
+    
+    <div class="game-info">
+        <div class="info-item">Score: <span id="score">0</span></div>
+        <div class="info-item">Time: <span id="time">60</span></div>
+        <div class="info-item">Level: <span id="level">1</span></div>
+    </div>
+
     <div class="canvas-container">
       <canvas id="canvas"></canvas>
-      <div id="max-prediction"></div>
+      <canvas id="game-canvas"></canvas>
+      <div id="game-overlay">
+        <div id="message">준비하세요!</div>
+      </div>
     </div>
     <div id="label-container"></div>
-
-    <!-- Teachable Machine 라이브러리 -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
-
-    <!-- 애플리케이션 모듈 -->
-    <script src="./js/stabilizer.js"></script>
-    <script src="./js/poseEngine.js"></script>
-    <script src="./js/gameEngine.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
